--- a/scss/style.css
+++ b/scss/style.css
@@ -34,12 +34,12 @@
 }
 
 @font-face {
-  font-family: "SFProDisplay";
-  src: url("SFProDisplay.tff") format("truetype");
+  font-family: SFProDisplay;
+  src: url("../fonts/SFProDisplay.ttf");
 }
 
 body {
-  font-family: SFProDisplay;
+  font-family: "SFProDisplay";
 }
 
 .start-container {
@@ -84,7 +84,7 @@ body {
   margin-top: 15px;
 }
 
-#signup-btn {
+#gotoSignup {
   color: white;
   font-size: 20px;
 }
