--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,8 @@ $iconSize: 10vw;
   --ion-color-themetext-contrast-rgb: 0, 0, 0;
   --ion-color-themetext-shade: #359d72;
   --ion-color-themetext-tint: #50ba8f;
-  --ion-background-color: #dbdbdb;
+  --ion-background-color: #ffffff;
+  --ion-toolbar-color: #659D7A;
 
   --ion-color-themewhite: #ffffff;
   --ion-color-themewhite-rgb: 255, 255, 255;
