--- a/scss/style.css
+++ b/scss/style.css
@@ -126,4 +126,12 @@ body {
 .test {
   --background: blue;
 }
+
+.infoTable {
+  width: 100%;
+}
+
+.infoCell {
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
