--- a/scss/style.css
+++ b/scss/style.css
@@ -36,7 +36,7 @@
 
 @font-face {
   font-family: SFProDisplay;
-  src: url("../fonts/SFProDisplay.ttf");
+  src: url("fonts/SFProDisplay.ttf");
 }
 
 body {
@@ -50,7 +50,7 @@ body {
       align-content: center;
   width: 100%;
   height: 100%;
-  background-image: url(../images/background.jpg);
+  background-image: url(images/background.jpg);
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
