--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,7 +47,7 @@ $iconSize: 10vw;
 
 @font-face {
   font-family: SFProDisplay;
-  src: url("fonts/SFProDisplay.ttf");
+  src: url("../fonts/SFProDisplay.ttf");
 }
 
 body {
@@ -64,7 +64,7 @@ body {
   align-content: center;
   width: 100%;
   height: 100%;
-  background-image: url(images/background.jpg);
+  background-image: url(../images/background.jpg);
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
