--- a/scss/style.scss
+++ b/scss/style.scss
@@ -164,6 +164,16 @@ body {
   text-align: center;
 }
 
+.infoCellFamily{
+  //background-color: red;
+  text-align: left;
+  font-size: 14px;
+}
+
+th {
+  text-align: left;
+}
+
 .infoButton {
   //background-color: blue;
 }
@@ -175,3 +185,5 @@ body {
   position: absolute;
   display: block;
 }
+
+
