--- a/scss/style.css
+++ b/scss/style.css
@@ -119,8 +119,32 @@ body {
 
 #menuLogo {
   width: 10vw;
-  margin-left: 10%;
   padding-bottom: 40%;
+  margin: 0 auto;
+}
+
+#receiptLogo {
+  width: 10vw;
+  position:relative;
+  margin-top: 5%;
+}
+
+#receiptHeader {
+  text-align: center;
+  margin: 0 auto;
+  margin-top: -5%;
+}
+
+
+#receiptLeftCol {
+    text-align: right;
+}
+
+#receiptContainer {
+  position: relative; 
+  text-align: center;
+  padding: 2%;
+  margin: 0 auto;
 }
 
 .userName {
