--- a/scss/style.css
+++ b/scss/style.css
@@ -176,6 +176,62 @@ body {
   display: block;
 }
 
+.billAdminModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.invAdminModal .modal-wrapper {
+  height: 70%;
+  top: 40%;
+  position: absolute;
+  display: block;
+}
+
+.consumeAdminModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.adminTenantModal .modal-wrapper {
+  height: 80%;
+  top: 30%;
+  position: absolute;
+  display: block;
+}
+
+.payCWModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.billCWModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.splitModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.consumeCWModal .modal-wrapper {
+  height: 45%;
+  top: 55%;
+  position: absolute;
+  display: block;
+}
+
 .logoutLogo {
   margin-left:-30%;
 }
