--- a/scss/style.css
+++ b/scss/style.css
@@ -117,39 +117,14 @@ body {
   padding-bottom: 5px;
 }
 
+.infoRow {
+  line-height: 200%;
+}
+
 #menuLogo {
   width: 10vw;
+  margin-left: 10%;
   padding-bottom: 40%;
-  margin-left: 5%;
-}
-
-#receiptLogo {
-  width: 10vw;
-  position:relative;
-  margin-top: 5%;
-}
-
-#receiptHeader {
-  text-align: center;
-  margin: 0 auto;
-  margin-top: -5%;
-}
-
-
-#receiptLeftCol {
-    text-align: left;
-}
-
-
-#receiptRightCol {
-  text-align: right;
-}
-
-#receiptContainer {
-  position: relative; 
-  text-align: center;
-  padding: 2%;
-  margin: 0 auto;
 }
 
 .userName {
@@ -169,6 +144,15 @@ body {
   text-align: center;
 }
 
+.infoCellFamily {
+  text-align: left;
+  font-size: 14px;
+}
+
+th {
+  text-align: left;
+}
+
 .updatePasswordModal .modal-wrapper {
   height: 45%;
   top: 55%;
@@ -176,7 +160,10 @@ body {
   display: block;
 }
 
-.logoutLogo {
-  margin-left:-30%;
+.updatePasswordModal .modal-wrapper {
+  height: 45%;
+  top: 55%;
+  position: absolute;
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
