--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,6 +178,27 @@ th {
   text-align: left;
 }
 
+#receiptLogo {
+  width: 10vw;
+  position:relative;
+  margin-top: 5%;
+}
+
+#receiptHeader {
+  text-align: center;
+  margin: 0 auto;
+  margin-top: -5%;
+}
+
+
+#receiptLeftCol {
+    text-align: left;
+}
+
+
+#receiptRightCol {
+  text-align: right;
+}
 
 // Edit the css for update password modal here
 .updatePasswordModal .modal-wrapper{
@@ -195,3 +216,72 @@ th {
   display: block;
 }
 
+.billAdminModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.invAdminModal .modal-wrapper {
+  height: 70%;
+  top: 40%;
+  position: absolute;
+  display: block;
+}
+
+.consumeAdminModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.adminTenantModal .modal-wrapper {
+  height: 80%;
+  top: 30%;
+  position: absolute;
+  display: block;
+}
+
+.payCWModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.billCWModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.CWInvModal .modal-wrapper {
+  height: 70%;
+  top: 35%;
+  position: absolute;
+  display: block;
+}
+
+.splitModal .modal-wrapper {
+  height: 50%;
+  top: 50%;
+  position: absolute;
+  display: block;
+}
+
+.consumeCWModal .modal-wrapper {
+  height: 45%;
+  top: 55%;
+  position: absolute;
+  display: block;
+}
+
+.invCWModal .modal-wrapper {
+  height: 45%;
+  top: 55%;
+  position: absolute;
+  display: block;
+}
